--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
-    "@types/styled-components": "^5.0.1"
+    "@types/styled-components": "^5.0.1",
+    "babel-plugin-styled-components": "^1.10.7"
   }
 }
