--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
     "@babel/core": "7.9.0",
     "@reduxjs/toolkit": "1.3.0",
     "@svgr/webpack": "4.3.3",
@@ -107,6 +108,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.7"
   },
   "jest": {
