--- a/package.json
+++ b/package.json
@@ -109,7 +109,9 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-import": "^1.13.0",
-    "babel-plugin-styled-components": "^1.10.7"
+    "babel-plugin-styled-components": "^1.10.7",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0"
   },
   "jest": {
     "roots": [
