--- a/.eslintrc
+++ b/.eslintrc
@@ -22,5 +22,5 @@
       "version": "detect"
     }
   },
-  "ignorePatterns": ["coverage/", "node_modules/", "src/serviceWorker.ts", "src/dawnbreak/"]
+  "ignorePatterns": ["coverage/", "node_modules/", "src/serviceWorker.ts"]
 }
