--- a/package.json
+++ b/package.json
@@ -110,8 +110,11 @@
     "@types/styled-components": "^5.0.1",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "eslint-plugin-svelte3": "^2.7.3",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "svelte": "^3.20.1",
+    "svelte-loader": "^2.13.6"
   },
   "jest": {
     "roots": [
