--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "less-loader": "^5.0.0",
     "svelte": "^3.20.1",
     "svelte-loader": "^2.13.6",
+    "svelte-preprocess": "^3.7.4",
     "svelte-preprocess-sass": "^0.2.0"
   },
   "jest": {
