--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,5 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": false,
-  "svelteSortOrder": "scripts-markup-styles"
+  "trailingComma": "es5"
 }
