--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "prettier/@typescript-eslint"
+    "prettier/@typescript-eslint",
+    "plugin:react-hooks/recommended"
   ],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
