--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
@@ -61,6 +61,7 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.6",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
