--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
     "@babel/core": "7.9.0",
-    "@reduxjs/toolkit": "1.3.0",
+    "@reduxjs/toolkit": "^1.3.6",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^6.12.2",
     "@testing-library/jest-dom": "^5.1.1",
@@ -45,6 +45,7 @@
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
+    "immer": "^6.0.5",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
