more test about contentMatch

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-ts-ignore": "off"
+    "@typescript-eslint/ban-ts-ignore": "off",
+    "@typescript-eslint/no-use-before-define": "off"
   },
   "overrides": [
     {
