--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": [
-    "react-app"
-  ],
-  "plugins": [
-    // 配置antd 获取less配置, 以使生效
-    ["import", {
-      "libraryName": "antd",
-      "libraryDirectory": "es",
-      "style": true // `style: true` 会加载 less 文件
-    }]
-  ]
+  "presets": ["react-app"]
 }
