--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "workbench.settings.editor": "json",
   "editor.formatOnSave": true,
-  "editor.tabSize": 2,
   "javascript.format.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib",
   "eslint.packageManager": "yarn",
@@ -25,5 +24,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
-  "editor.codeActionsOnSaveTimeout": 4000
+  "editor.codeActionsOnSaveTimeout": 4000,
+  "compile-hero.disable-compile-files-on-did-save-code": true
 }
