--- a/packages/dawnbreak/package.json
+++ b/packages/dawnbreak/package.json
@@ -2,6 +2,8 @@
   "name": "dawnbreak",
   "description": "TODO",
   "version": "0.0.1",
+  "private": true,
+  "main": "index.js",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
