--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "twilight",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "dependencies": {
-    "@ant-design/icons": "^4.0.6",
-    "@babel/core": "7.9.0",
+    "@babel/core": "^7.0.0",
     "@reduxjs/toolkit": "^1.3.6",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^6.12.2",
@@ -19,7 +21,6 @@
     "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
-    "antd": "^4.1.1",
     "axios": "^0.19.2",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
@@ -111,14 +112,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-import": "^1.13.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "eslint-plugin-svelte3": "^2.7.3",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "svelte": "^3.20.1",
-    "svelte-loader": "^2.13.6",
-    "svelte-preprocess": "^3.7.4",
-    "svelte-preprocess-sass": "^0.2.0"
+    "babel-plugin-styled-components": "^1.10.7"
   },
   "jest": {
     "roots": [
