--- a/package.json
+++ b/package.json
@@ -97,6 +97,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
