--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "styled-components": "^5.1.0",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "styled-system": "^5.1.5"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -61,6 +62,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-mock-store": "^1.0.2",
     "@types/styled-components": "^5.0.1",
+    "@types/styled-system": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "babel-eslint": "10.1.0",
