--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "packages/*"
   ],
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
+    "emotion-theming": "^10.0.27",
     "immer": "^6.0.5",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
@@ -68,6 +72,7 @@
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
+    "babel-plugin-emotion": "^10.0.33",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-plugin-styled-components": "^1.11.1",
@@ -81,6 +86,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
+    "eslint-plugin-emotion": "^10.0.27",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
