--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -16,5 +16,5 @@
     "jsx": "react",
     "baseUrl": "src"
   },
-  "include": ["src", "packages/dawnbreak"]
+  "include": ["src", "packages/*"]
 }
