--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "packages/*"
   ],
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/core": "^1.0.0-rc.3",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
+    "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
     "immer": "^6.0.5",
     "node-sass": "^4.14.1",
+    "randomcolor": "^0.6.2",
     "react": "^16.12.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
@@ -60,6 +62,7 @@
     "@testing-library/user-event": "^10.0.0",
     "@types/jest": "^25.1.4",
     "@types/node": "^12.12.31",
+    "@types/randomcolor": "^0.5.5",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
