--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "test:coverage": "yarn test --watchAll false --coverage",
-    "lint": "tsc --noEmit && eslint '*/**/*.{ts,tsx}'",
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --quiet --fix"
   },
   "eslintConfig": {
