--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
     "immer": "^6.0.5",
+    "konva": "^7.1.3",
     "node-sass": "^4.14.1",
     "randomcolor": "^0.6.2",
     "react": "^16.12.0",
@@ -85,7 +86,7 @@
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.6.0",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
