--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "recoil": "^0.0.13",
     "redux": "^4.0.5",
     "styled-components": "^5.1.0",
     "styled-normalize": "^8.0.7",
