--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "test": "node scripts/test.js",
     "test:coverage": "yarn test --watchAll false --coverage",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "yarn lint --quiet --fix"
+    "lint:fix": "yarn lint --quiet --fix",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,6 +59,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/react": "^6.0.26",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^6.12.2",
     "@testing-library/jest-dom": "^5.1.1",
@@ -117,6 +123,7 @@
     "prettier": "^1.19.1",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
+    "react-is": "^16.13.1",
     "redux-mock-store": "^1.5.4",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
