--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@reduxjs/toolkit": "^1.3.6",
+    "ahooks": "^2.7.0",
     "axios": "^0.19.2",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
