--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "@chakra-ui/core": "^1.0.0-rc.3",
+    "@chakra-ui/core": "^1.0.0-rc.8",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@reduxjs/toolkit": "^1.3.6",
@@ -14,14 +14,17 @@
     "axios": "^0.19.2",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^2.9.4",
     "immer": "^6.0.5",
     "konva": "^7.1.3",
     "node-sass": "^4.14.1",
     "randomcolor": "^0.6.2",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
+    "react-konva": "^16.13.0-6",
+    "react-reconciler": "^0.25.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "recoil": "^0.0.13",
