--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.14.1",
     "randomcolor": "^0.6.2",
     "react": "^16.14.0",
+    "react-animate-height": "^2.0.23",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
