--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   ],
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.8",
+    "@chakra-ui/react": "^1.0.0",
     "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "@reduxjs/toolkit": "^1.3.6",
     "ahooks": "^2.7.0",
     "axios": "^0.19.2",
