--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^2.9.4",
     "immer": "^6.0.5",
     "konva": "^7.1.3",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "randomcolor": "^0.6.2",
     "react": "^16.14.0",
