--- a/packages/editor/public/manifest.json
+++ b/packages/editor/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Twilight",
+  "name": "next gen editor",
   "icons": [
     {
       "src": "favicon.ico",
