优化边界性能

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -4,6 +4,7 @@
   "description": "editor",
   "author": "Pakho Leung <pakholeung37@gmail.com>",
   "license": "MIT",
+  "private": "true",
   "main": "lib/editor.js",
   "dependencies": {
     "@chakra-ui/react": "^1.0.0",
