--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -21,6 +21,7 @@
     "react-animate-height": "^2.0.23",
     "react-custom-scrollbars": "^4.2.1",
     "react-icons": "^3.11.0",
+    "@twilight/react-konva-portal": "^1.0.10",
     "react-router-dom": "^5.2.0",
     "recoil": "^0.1.0"
   },
