--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -11,17 +11,18 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@twilight/react-konva": "^17.0.0",
+    "@twilight/react-konva-portal": "^1.0.10",
     "ahooks": "^2.7.0",
     "axios": "^0.19.2",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
     "framer-motion": "^2.9.4",
+    "immer": "^8.0.0",
     "lodash": "^4.17.20",
     "randomcolor": "^0.6.2",
     "react-animate-height": "^2.0.23",
     "react-custom-scrollbars": "^4.2.1",
     "react-icons": "^3.11.0",
-    "@twilight/react-konva-portal": "^1.0.10",
     "react-router-dom": "^5.2.0",
     "recoil": "^0.1.0"
   },
