--- a/packages/react-konva/package.json
+++ b/packages/react-konva/package.json
@@ -20,7 +20,7 @@
     "scheduler": "^0.19.1"
   },
   "peerDependencies": {
-    "konva": ">3.2.5",
+    "konva": ">=7",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
   },
@@ -30,7 +30,7 @@
     "chai": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "konva": "^7.0.4",
+    "konva": "^7.2.2",
     "nwb": "^0.23.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
