--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "lerna run build --stream",
     "test": "lerna run test --stream",
+    "test:editor": "yarn workspace @twilight/editor test",
     "start": "yarn workspace @twilight/editor start",
     "storybook": "start-storybook -s ./packages/editor/public -p 6006",
     "build-storybook": "build-storybook"
@@ -29,6 +30,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/color-string": "^1.5.0",
     "@types/color-convert": "^2.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
