--- a/packages/react-konva-portal/package.json
+++ b/packages/react-konva-portal/package.json
@@ -28,6 +28,7 @@
     "@twilight/react-konva": ">=17.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-regenerator": "^7.0.0",
     "cross-env": "^7.0.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
