--- a/packages/react-konva/package.json
+++ b/packages/react-konva/package.json
@@ -38,7 +38,7 @@
     "use-image": "^1.0.5"
   },
   "scripts": {
-    "build": "nwb build-react-component && cpy ./ReactKonvaCore.d.ts ./lib",
+    "build": "nwb build-react-component && cp ./ReactKonvaCore.d.ts ./lib",
     "clean": "nwb clean-module && nwb clean-demo",
     "start": "nwb serve-react-demo",
     "test:typings": "tsc --noEmit",
