--- a/packages/react-konva/package.json
+++ b/packages/react-konva/package.json
@@ -20,7 +20,7 @@
     "scheduler": "^0.19.1"
   },
   "peerDependencies": {
-    "konva": ">3.2.5",
+    "konva": ">=7",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
   },
@@ -30,7 +30,7 @@
     "chai": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "konva": "^7.0.4",
+    "konva": "^7.2.2",
     "nwb": "^0.23.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -38,7 +38,7 @@
     "use-image": "^1.0.5"
   },
   "scripts": {
-    "build": "nwb build-react-component && cpy ./ReactKonvaCore.d.ts ./lib",
+    "build": "nwb build-react-component && cp ./ReactKonvaCore.d.ts ./lib",
     "clean": "nwb clean-module && nwb clean-demo",
     "start": "nwb serve-react-demo",
     "test:typings": "tsc --noEmit",
